--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "bare-front",
+  "name": "perform-todomvc",
   "version": "1.0.0",
-  "description": "better react",
-  "keywords": [],
+  "description": "Perform TodoMVC Implementation",
+  "keywords": [
+    "perform",
+    "todomvc"
+  ],
   "author": "Igor Sukharev <imixaly4@gmail.com>",
   "license": "ISC",
   "private": true,
@@ -11,11 +14,15 @@
   },
   "dependencies": {
     "clsx": "^1.1.1",
-    "director": "^1.2.8"
+    "director": "^1.2.8",
+    "todomvc-app-css": "^2.3.0",
+    "todomvc-common": "^1.0.5"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.2",
     "html-webpack-plugin": "^4.5.1",
+    "style-loader": "^2.0.0",
     "webpack": "^5.14.0",
     "webpack-cli": "^4.3.1"
   }
