--- a/package.json
+++ b/package.json
@@ -14,20 +14,20 @@
     "open": "open-cli dist/index.html"
   },
   "dependencies": {
-    "@perform/base": "link:../base/dev/",
-    "@perform/dom": "link:../dom/dev/",
+    "@perform/common": "link:../common/dist",
+    "@perform/dom": "link:../dom/dist",
     "clsx": "^1.1.1",
     "director": "^1.2.8",
-    "todomvc-app-css": "^2.3.0",
+    "todomvc-app-css": "^2.4.1",
     "todomvc-common": "^1.0.5"
   },
   "devDependencies": {
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.0.2",
-    "html-webpack-plugin": "^4.5.1",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "css-loader": "^6.1.0",
+    "html-webpack-plugin": "^5.3.2",
     "open-cli": "^7.0.0",
-    "style-loader": "^2.0.0",
-    "webpack": "^5.14.0",
-    "webpack-cli": "^4.3.1"
+    "style-loader": "^3.1.0",
+    "webpack": "^5.45.1",
+    "webpack-cli": "^4.7.2"
   }
 }
