--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "todomvc-common": "^1.0.5"
   },
   "devDependencies": {
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "css-loader": "^6.1.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.3.0",
     "html-webpack-plugin": "^5.3.2",
-    "open-cli": "^7.0.0",
-    "style-loader": "^3.1.0",
-    "webpack": "^5.45.1",
-    "webpack-cli": "^4.7.2"
+    "open-cli": "^7.0.1",
+    "style-loader": "^3.3.0",
+    "webpack": "^5.55.1",
+    "webpack-cli": "^4.8.0"
   }
 }
