--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "open": "open-cli dist/index.html"
   },
   "dependencies": {
-    "@perform/common": "link:../common/dist",
-    "@perform/dom": "link:../dom/dist",
-    "@perform/dom-components": "link:../dom-components/dist",
+    "@perform/common": "link:../common",
+    "@perform/dom-element": "link:../dom-element",
+    "@perform/dom-other": "link:../dom-other",
     "clsx": "^1.1.1",
     "director": "^1.2.8",
     "todomvc-app-css": "^2.4.1",
