--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
   "license": "ISC",
   "author": "Igor Sukharev <imixaly4@gmail.com>",
   "scripts": {
-    "start": "NODE_ENV=development webpack serve --open",
+    "start": "NODE_ENV=development  webpack serve --open",
     "prettier": "prettier --write ."
   },
   "dependencies": {
     "@efusor/dom": "link:../dom",
     "@efusor/generic": "link:../generic",
     "clsx": "^1.1.1",
-    "director": "^1.2.8",
     "todomvc-app-css": "^2.4.2",
     "todomvc-common": "^1.0.5"
   },
@@ -25,6 +24,8 @@
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.6.2",
     "style-loader": "^3.3.1",
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.7.4",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.2"
