--- a/.github/workflows/update-pages.yml
+++ b/.github/workflows/update-pages.yml
@@ -1,6 +1,5 @@
 name: Build & Deploy to Github Pages
 
-
 on:
   # Runs on pushes targeting the default branch
   push:
@@ -9,13 +8,11 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
-
 
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
@@ -23,10 +20,7 @@ concurrency:
   group: pages
   cancel-in-progress: false
 
-
 jobs:
-
-
   build:
     runs-on: ubuntu-latest
     steps:
@@ -44,14 +38,15 @@ jobs:
         run: yarn install
       - name: Build Application
         run: yarn build
+        env:
+          WEBPACK_PUBLIC_PATH: /todomvc/
       - name: Upload Artifact
         uses: actions/upload-pages-artifact@v1
         with:
           path: ./dist
-    
-    
+
   deploy:
-    environment: 
+    environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
@@ -60,6 +55,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
-      
-
-          
