--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fusorjs/todomvc",
   "version": "1.0.0",
-  "description": "Fusor Todomvc implementation",
+  "description": "Todomvc Fusor implementation",
   "keywords": [
     "fusor",
     "fusorjs",
@@ -17,7 +17,7 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
-    "@fusorjs/dom": "^1.0.0",
+    "@fusorjs/dom": "^2.0.0",
     "clsx": "^1.1.1",
     "todomvc-app-css": "^2.4.2",
     "todomvc-common": "^1.0.5"
